add missing file pathfinding

--- a/specification_meta_generator.ipynb
+++ b/specification_meta_generator.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b4a8ccc1",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "80487b02",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
     "    return latest_version\n",
     "\n",
     "\n",
-    "def update_spec_table(eachfile,spec_updated_df):\n",
+    "def update_spec_table(script_path,eachfile,spec_updated_df):\n",
     "    original_df = pd.read_csv(os.path.join(script_path,eachfile),delimiter='\\t',header=0,\n",
     "                              usecols=['name','subClassOf','version','url'])\n",
     "    update_needed = check_for_updates(spec_updated_df,original_df)\n",
@@ -176,26 +176,26 @@
     "    for eachfile in filelist:\n",
     "        if 'deprecated' in eachfile:\n",
     "            spec_updated_df = deprecated\n",
-    "            update_spec_table(eachfile,spec_updated_df)\n",
+    "            update_spec_table(script_path,eachfile,spec_updated_df)\n",
     "        elif 'profile' in eachfile:\n",
     "            if 'draft' in eachfile:\n",
     "                spec_updated_df = draft_profile\n",
-    "                update_spec_table(eachfile,spec_updated_df)\n",
+    "                update_spec_table(script_path,eachfile,spec_updated_df)\n",
     "            else:\n",
     "                spec_updated_df = released_profile\n",
-    "                update_spec_table(eachfile,spec_updated_df)\n",
+    "                update_spec_table(script_path,eachfile,spec_updated_df)\n",
     "        else:\n",
     "            if 'draft' in eachfile:\n",
     "                spec_updated_df = draft_type\n",
-    "                update_spec_table(eachfile,spec_updated_df)\n",
+    "                update_spec_table(script_path,eachfile,spec_updated_df)\n",
     "            else:\n",
     "                spec_updated_df = released_type\n",
-    "                update_spec_table(eachfile,spec_updated_df)"
+    "                update_spec_table(script_path,eachfile,spec_updated_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "f75bf57c",
    "metadata": {
     "scrolled": true
@@ -210,6 +210,33 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e9e12cf9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "536eca94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "import time\n",
+    "import requests\n",
+    "\n",
+    "from src.metatables import *\n",
+    "\n",
+    "script_path = os.getcwd()\n",
+    "update_tables(script_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93a886a6",
    "metadata": {},
    "outputs": [],
    "source": []
