Fixed issue of missing types from table

--- a/specification_meta_generator.ipynb
+++ b/specification_meta_generator.ipynb
@@ -111,7 +111,7 @@
     "                update_needed = False\n",
     "        else:\n",
     "            update_needed = False\n",
-    "    return(update_needed)\n",
+    "    return update_needed\n",
     "\n",
     "\n",
     "def compare_versions(a,b):\n",
@@ -141,7 +141,7 @@
     "\n",
     "def update_spec_table(script_path,eachfile,spec_updated_df):\n",
     "    original_df = pd.read_csv(os.path.join(script_path,eachfile),delimiter='\\t',header=0,\n",
-    "                              usecols=['name','subClassOf','version','url'])\n",
+    "                              usecols=['name','namespace','subClassOf','type','version','url'])\n",
     "    update_needed = check_for_updates(spec_updated_df,original_df)\n",
     "    if update_needed == True:\n",
     "        classes_to_update = spec_updated_df['name'].to_list()\n",
@@ -196,6 +196,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8dd2865d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Make a more robust comparason tool\n",
+    "## Check number of values in decimal place\n",
+    "## Check if value prior to decimal (x.) is the same\n",
+    "## If both conditions are True, then the higher value after the split is newer\n",
+    "## If value prior to decimal (x.) != same, value with higher prior to decimal is newer\n",
+    "\n",
+    "def compare_versions(a,b):\n",
+    "    version_a = a.split('.')\n",
+    "    version_b = b.split('.')\n",
+    "    if len(version_a[1])>1:\n",
+    "        ## This is a funky value that needs to be treated as such\n",
+    "        ext_verse = version_a[1]\n",
+    "        \n",
+    "    if len(version_b[1])>1:\n",
+    "        ## This is a funky value that needs to be treated as such\n",
+    "    \n",
+    "    greaterlist = ['0.10','0.11','0.12','0.13','0.14','0.15']\n",
+    "    lesserlist = ['0.2','0.3','0.4','0.5','0.6','0.7','0.8','0.9']\n",
+    "    latest_version = None\n",
+    "    if a > b:\n",
+    "        latest_version = a\n",
+    "    else:\n",
+    "        for x in greaterlist:\n",
+    "            if x in a:\n",
+    "                weirdversion = True\n",
+    "                break\n",
+    "            else:\n",
+    "                weirdversion = False\n",
+    "        if weirdversion == False:\n",
+    "            latest_version = b\n",
+    "        else:\n",
+    "            for y in lesserlist:\n",
+    "                if y in b:\n",
+    "                    latest_version = a\n",
+    "                    break\n",
+    "                else:\n",
+    "                    latest_version = b    \n",
+    "    return latest_version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f75bf57c",
    "metadata": {
     "scrolled": true
@@ -216,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "536eca94",
    "metadata": {},
    "outputs": [],
