Generalize version comparison to be more robust

--- a/specification_meta_generator.ipynb
+++ b/specification_meta_generator.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b4a8ccc1",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "80487b02",
    "metadata": {},
    "outputs": [],
@@ -114,28 +114,33 @@
     "    return update_needed\n",
     "\n",
     "\n",
+    "def parse_version_number(version_number):\n",
+    "    clean_number = version_number.split('-')\n",
+    "    clean_version = clean_number[0]\n",
+    "    return clean_version\n",
+    "\n",
+    "\n",
     "def compare_versions(a,b):\n",
-    "    greaterlist = ['0.10','0.11','0.12','0.13','0.14','0.15']\n",
-    "    lesserlist = ['0.2','0.3','0.4','0.5','0.6','0.7','0.8','0.9']\n",
-    "    latest_version = None\n",
-    "    if a > b:\n",
+    "    version_a = parse_version_number(a).split('.')\n",
+    "    version_b = parse_version_number(b).split('.')\n",
+    "    if int(version_a[0]) > int(version_b[0]):\n",
+    "        ## The whole number of version a is greater than version b\n",
     "        latest_version = a\n",
+    "    elif int(version_a[0]) < int(version_b[0]): \n",
+    "        ## The whole number of version b is greater than version a\n",
+    "        latest_version = b\n",
     "    else:\n",
-    "        for x in greaterlist:\n",
-    "            if x in a:\n",
-    "                weirdversion = True\n",
-    "                break\n",
-    "            else:\n",
-    "                weirdversion = False\n",
-    "        if weirdversion == False:\n",
+    "        ## The whole numbers of version a and b are the same, check the decimal value\n",
+    "        if int(version_a[1]) > int(version_b[1]):\n",
+    "            ## The decimal value of version a is greater than version b\n",
+    "            latest_version = a\n",
+    "        elif int(version_a[1]) < int(version_b[1]):\n",
+    "            ## The decimal value of version b is greater than version a\n",
     "            latest_version = b\n",
     "        else:\n",
-    "            for y in lesserlist:\n",
-    "                if y in b:\n",
-    "                    latest_version = a\n",
-    "                    break\n",
-    "                else:\n",
-    "                    latest_version = b    \n",
+    "            ## The versions are the same pick the new version\n",
+    "            latest_version = a\n",
+    "      \n",
     "    return latest_version\n",
     "\n",
     "\n",
@@ -195,54 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8dd2865d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#### Make a more robust comparason tool\n",
-    "## Check number of values in decimal place\n",
-    "## Check if value prior to decimal (x.) is the same\n",
-    "## If both conditions are True, then the higher value after the split is newer\n",
-    "## If value prior to decimal (x.) != same, value with higher prior to decimal is newer\n",
-    "\n",
-    "def compare_versions(a,b):\n",
-    "    version_a = a.split('.')\n",
-    "    version_b = b.split('.')\n",
-    "    if len(version_a[1])>1:\n",
-    "        ## This is a funky value that needs to be treated as such\n",
-    "        ext_verse = version_a[1]\n",
-    "        \n",
-    "    if len(version_b[1])>1:\n",
-    "        ## This is a funky value that needs to be treated as such\n",
-    "    \n",
-    "    greaterlist = ['0.10','0.11','0.12','0.13','0.14','0.15']\n",
-    "    lesserlist = ['0.2','0.3','0.4','0.5','0.6','0.7','0.8','0.9']\n",
-    "    latest_version = None\n",
-    "    if a > b:\n",
-    "        latest_version = a\n",
-    "    else:\n",
-    "        for x in greaterlist:\n",
-    "            if x in a:\n",
-    "                weirdversion = True\n",
-    "                break\n",
-    "            else:\n",
-    "                weirdversion = False\n",
-    "        if weirdversion == False:\n",
-    "            latest_version = b\n",
-    "        else:\n",
-    "            for y in lesserlist:\n",
-    "                if y in b:\n",
-    "                    latest_version = a\n",
-    "                    break\n",
-    "                else:\n",
-    "                    latest_version = b    \n",
-    "    return latest_version"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f75bf57c",
    "metadata": {
     "scrolled": true
@@ -263,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "536eca94",
    "metadata": {},
    "outputs": [],
@@ -287,6 +245,54 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "196f2190",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9381a37a",
+   "metadata": {},
+   "source": [
+    "## Deprecated functions-- Do not use!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47519f6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_versions(a,b):\n",
+    "    greaterlist = ['0.10','0.11','0.12','0.13','0.14','0.15']\n",
+    "    lesserlist = ['0.2','0.3','0.4','0.5','0.6','0.7','0.8','0.9']\n",
+    "    latest_version = None\n",
+    "    if a > b:\n",
+    "        latest_version = a\n",
+    "    else:\n",
+    "        for x in greaterlist:\n",
+    "            if x in a:\n",
+    "                weirdversion = True\n",
+    "                break\n",
+    "            else:\n",
+    "                weirdversion = False\n",
+    "        if weirdversion == False:\n",
+    "            latest_version = b\n",
+    "        else:\n",
+    "            for y in lesserlist:\n",
+    "                if y in b:\n",
+    "                    latest_version = a\n",
+    "                    break\n",
+    "                else:\n",
+    "                    latest_version = b    \n",
+    "    return latest_version"
+   ]
   }
  ],
  "metadata": {
