trigger manual update since bioschemas update pipeline does not include Types

--- a/specification_meta_generator.ipynb
+++ b/specification_meta_generator.ipynb
@@ -589,7 +589,17 @@
    "id": "196f2190",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Validate a schema\n",
+    "from biothings_schema import Schema\n",
+    "inputfile = os.path.join(script_path,'drafts','gbhBioSample.json')\n",
+    "with open(inputfile,'rb') as infile:\n",
+    "    definedterm = json.load(infile)\n",
+    "\n",
+    "#print(definedterm)\n",
+    "sc = Schema(definedterm)\n",
+    "sc.validation"
+   ]
   },
   {
    "cell_type": "markdown",
