fix namespace in context urls

--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -203,11 +203,11 @@
     "        \"rdf\": \"http://www.w3.org/1999/02/22-rdf-syntax-ns#\",\n",
     "        \"rdfs\": \"http://www.w3.org/2000/01/rdf-schema#\",\n",
     "        \"owl\":\"http://www.w3.org/2002/07/owl/\",\n",
-    "        \"bioschemas\":\"https://discovery.biothings.io/view/bioschemas/\",\n",
-    "        \"bioschemasdrafts\":\"https://discovery.biothings.io/view/bioschemasdrafts/\",\n",
-    "        \"bioschemastypes\":\"https://discovery.biothings.io/view/bioschemastypes/\",\n",
-    "        \"bioschemastypesdrafts\":\"https://discovery.biothings.io/view/bioschemastypesdrafts/\",\n",
-    "        \"bioschemasdeprecated\":\"https://discovery.biothings.io/view/bioschemasdeprecated/\",\n",
+    "        \"bioschemas\":\"https://discovery.biothings.io/ns/bioschemas/\",\n",
+    "        \"bioschemasdrafts\":\"https://discovery.biothings.io/ns/bioschemasdrafts/\",\n",
+    "        \"bioschemastypes\":\"https://discovery.biothings.io/ns/bioschemastypes/\",\n",
+    "        \"bioschemastypesdrafts\":\"https://discovery.biothings.io/ns/bioschemastypesdrafts/\",\n",
+    "        \"bioschemasdeprecated\":\"https://discovery.biothings.io/ns/bioschemasdeprecated/\",\n",
     "        \"dct\":\"http://purl.org/dc/terms/\"\n",
     "    }\n",
     "    return allcontext\n",
